Use JBoss default DB under motech schema
git-svn-id: https://motech.rcg.usm.maine.edu/svn/motech/trunk@63 6f28304a-7744-dd4f-b2a8-8a00c5622ee2